--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.UKL"
         tools:targetApi="31">
         <activity
+            android:name=".RegisActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".Home"
             android:exported="false">
             <meta-data
